# juno

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: constants.hpp  system_util.hpp
include/codegen/: codegen.hpp
include/compiler/: compiler.hpp
include/evaluator/: eval_visitor.hpp  evaluator.hpp
include/jnvm/: instruction.hpp  machine.hpp
include/juno/lexer/: lexer.hpp  token.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
include/solver/: solver.hpp
source/: entry.cpp
source/codegen/: codegen.cpp
source/compiler/: compiler.cpp
source/evaluator/: eval_visitor.cpp  evaluator.cpp
source/juno/lexer/: lexer.cpp
source/lexer/: lexer.cpp
source/parser/: parser.cpp
source/solver/: solver.cpp
tests/: compounds.jn  comptime.jn  function.jn  if.jn  main.jn  type_solver_test_1.jn  type_solver_test_2.jn
